# Redes_proyecto_client

./: .gitignore  Dockerfile  README.md  a.jl  claude_bot.jl  claude_bot.py  client.pcapng  main.jl  main.py  mcp_config.json  mcp_manager.jl  mcp_manager.py  moon_mcp.py  pyproject.toml  requirements.txt  session.json
