[project]
name = "claude-chatbot" 
version = "2.1.0"
description = "Claude Terminal Chatbot with MCP Integration [future TUI]"
readme = "README.md"
authors = [
    {name = "Gustavo", email = "cru22779@uvg.edu.gt"}
]
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.40.0",
    "rich>=13.0.0",
    "mcp>=1.0.0",
    "textual>=0.40.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
claude-chatbot = "client:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "ruff>=0.1.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "main.py",
	"claude_bot.py",
	"mcp_manager.py",
    "README.md",
    "requirements.txt"
]

[tool.uv]
dev-dependencies = [
    "black>=25.1.0",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]

[tool.ruff]
line-length = 100

[tool.black]
line-length = 100
